--- a/style1.css
+++ b/style1.css
@@ -77,24 +77,24 @@ box-shadow:
 500px 150px #ff0,
 450px 150px #ff0,
 400px 150px #ff0,
-350px 150px #ff0,
-300px 150px #ff0,
+350px 150px #fff,
+300px 150px #fff,
 250px 150px #ff0,
 200px 150px #ff0,
-550px 150px #ff0,
-600px 150px #ff0,
+550px 150px #fff,
+600px 150px #fff,
 650px 150px #ff0,
 700px 150px #ff0,
 750px 150px #ff0,
 500px 200px #ff0,
 450px 200px #ff0,
 400px 200px #ff0,
-350px 200px #ff0,
-300px 200px #ff0,
+350px 200px #00f,
+300px 200px #fff,
 250px 200px #ff0,
 200px 200px #ff0,
-550px 200px #ff0,
-600px 200px #ff0,
+550px 200px #fff,
+600px 200px #00f,
 650px 200px #ff0,
 700px 200px #ff0,
 750px 200px #ff0,
@@ -137,28 +137,28 @@ box-shadow:
 500px 400px #ff0,
 450px 400px #ff0,
 400px 400px #ff0,
-350px 400px #ff0,
+350px 400px #f00,
 300px 400px #ff0,
 250px 400px #ff0,
 200px 400px #ff0,
 550px 400px #ff0,
-600px 400px #ff0,
+600px 400px #f00,
 650px 400px #ff0,
 700px 400px #ff0,
 750px 400px #ff0,
-500px 450px #ff0,
-450px 450px #ff0,
-400px 450px #ff0,
+500px 450px #f00,
+450px 450px #f00,
+400px 450px #f00,
 350px 450px #ff0,
 300px 450px #ff0,
 250px 450px #ff0,
 200px 450px #ff0,
-550px 450px #ff0,
+550px 450px #f00,
 600px 450px #ff0,
 650px 450px #ff0,
 700px 450px #ff0,
 750px 450px #ff0,
-500px 500px #ff0,
+500px 500px #f0e,
 450px 500px #ff0,
 400px 500px #ff0,
 350px 500px #ff0,
