--- a/style1.css
+++ b/style1.css
@@ -158,6 +158,186 @@ box-shadow:
 650px 450px #ff0,
 700px 450px #ff0,
 750px 450px #ff0,
+500px 500px #ff0,
+450px 500px #ff0,
+400px 500px #ff0,
+350px 500px #ff0,
+300px 500px #ff0,
+250px 500px #ff0,
+200px 500px #ff0,
+550px 500px #ff0,
+600px 500px #ff0,
+650px 500px #ff0,
+700px 500px #ff0,
+750px 500px #ff0,
+500px 550px #ff0,
+450px 550px #ff0,
+400px 550px #ff0,
+350px 550px #ff0,
+300px 550px #ff0,
+250px 550px #ff0,
+550px 550px #ff0,
+600px 550px #ff0,
+650px 550px #ff0,
+700px 550px #ff0
+
+;
+}
+
+.sprite:hover:after{
+content: '';
+display: block;
+width: 50px;
+height: 50px;
+box-shadow: 
+500px 0px #000,
+450px 0px #000,
+400px 0px #000,
+350px 0px #000,
+300px 0px #000,
+250px 0px #000,
+550px 0px #000,
+600px 0px #000,
+650px 0px #000,
+700px 0px #000,
+200px 50px #000,
+150px 100px #000,
+150px 150px #000,
+150px 200px #000,
+150px 250px #000,
+150px 300px #000,
+150px 350px #000,
+150px 400px #000,
+150px 450px #000,
+150px 500px #000,
+750px 50px #000,
+800px 100px #000,
+800px 150px #000,
+800px 200px #000,
+800px 250px #000,
+800px 300px #000,
+800px 350px #000,
+800px 400px #000,
+800px 450px #000,
+800px 500px #000,
+200px 550px #000,
+750px 550px #000,
+500px 600px #000,
+450px 600px #000,
+400px 600px #000,
+350px 600px #000,
+300px 600px #000,
+250px 600px #000,
+550px 600px #000,
+600px 600px #000,
+650px 600px #000,
+700px 600px #000,
+500px 50px #ff0,
+450px 50px #ff0,
+400px 50px #ff0,
+350px 50px #ff0,
+300px 50px #ff0,
+250px 50px #ff0,
+550px 50px #ff0,
+600px 50px #ff0,
+650px 50px #ff0,
+700px 50px #ff0,
+500px 100px #ff0,
+450px 100px #ff0,
+400px 100px #ff0,
+350px 100px #ff0,
+300px 100px #ff0,
+250px 100px #ff0,
+200px 100px #ff0,
+550px 100px #ff0,
+600px 100px #ff0,
+650px 100px #ff0,
+700px 100px #ff0,
+750px 100px #ff0,
+500px 150px #ff0,
+450px 150px #ff0,
+400px 150px #ff0,
+350px 150px #fff,
+300px 150px #fff,
+250px 150px #ff0,
+200px 150px #ff0,
+550px 150px #fff,
+600px 150px #fff,
+650px 150px #ff0,
+700px 150px #ff0,
+750px 150px #ff0,
+500px 200px #ff0,
+450px 200px #ff0,
+400px 200px #ff0,
+350px 200px #fff,
+300px 200px #00f,
+250px 200px #ff0,
+200px 200px #ff0,
+550px 200px #00f,
+600px 200px #fff,
+650px 200px #ff0,
+700px 200px #ff0,
+750px 200px #ff0,
+500px 250px #ff0,
+450px 250px #ff0,
+400px 250px #ff0,
+350px 250px #ff0,
+300px 250px #ff0,
+250px 250px #ff0,
+200px 250px #ff0,
+550px 250px #ff0,
+600px 250px #ff0,
+650px 250px #ff0,
+700px 250px #ff0,
+750px 250px #ff0,
+500px 300px #ff0,
+450px 300px #ff0,
+400px 300px #ff0,
+350px 300px #ff0,
+300px 300px #ff0,
+250px 300px #ff0,
+200px 300px #ff0,
+550px 300px #ff0,
+600px 300px #ff0,
+650px 300px #ff0,
+700px 300px #ff0,
+750px 300px #ff0,
+500px 350px #ff0,
+450px 350px #ff0,
+400px 350px #ff0,
+350px 350px #ff0,
+300px 350px #ff0,
+250px 350px #ff0,
+200px 350px #ff0,
+550px 350px #ff0,
+600px 350px #ff0,
+650px 350px #ff0,
+700px 350px #ff0,
+750px 350px #ff0,
+500px 400px #ff0,
+450px 400px #ff0,
+400px 400px #ff0,
+350px 400px #f00,
+300px 400px #ff0,
+250px 400px #ff0,
+200px 400px #ff0,
+550px 400px #ff0,
+600px 400px #f00,
+650px 400px #ff0,
+700px 400px #ff0,
+750px 400px #ff0,
+500px 450px #f00,
+450px 450px #f00,
+400px 450px #f00,
+350px 450px #ff0,
+300px 450px #ff0,
+250px 450px #ff0,
+200px 450px #ff0,
+550px 450px #f00,
+600px 450px #ff0,
+650px 450px #ff0,
+700px 450px #ff0,
+750px 450px #ff0,
 500px 500px #f0e,
 450px 500px #ff0,
 400px 500px #ff0,
